chore: update .gitignore to exclude large files and data folders
- Exclude data/ folder (contains large genome files >50MB)
- Exclude results/ folder (contains large CSV files >50MB)
- Exclude *.gz compressed files in root directory
- Exclude Rplots.pdf and other large files
- Keep only source code and figures/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,18 @@ Thumbs.db
 # Logs
 *.log
 conda_install.log
+wget-log
 
 # Data files - exclude data folder
 data/
 
-# Results - include all results and figures
-# results/
-# figures/
-# Rplots.pdf
+# Results - exclude results folder
+results/
+
+# Large data files in root directory
+*.gz
+Rplots.pdf
+
+# Exclude workflow and spec directories
+.spec-workflow/
+.claude/
